# food

./: .dockerignore  .gitignore  Dockerfile  README.md  create_translations.py  docker-compose.yml  ecosystem.config.js  gunicorn.conf.py  manage.py  manifest.json  mydb_clean.sql  mydb_export.sql  package.json  pnpm-lock.yaml  postcss.config.mjs  pyproject.toml  requirements.txt  worker.js  wrangler.jsonc  wrangler.toml
.github/workflows/: ci.yml
pages/: admin.py  apps.py  models.py  urls.py  views.py
pages/migrations/: 0001_initial.py
pages/static/: input.css  styles.css
pages/templates/: base.html
restaurants/: admin.py  apps.py  asgi.py  constants.py  d1.py  models.py  scheduler.py  settings.py  urls.py  views.py  wsgi.py
restaurants/d1_backend/: base copy.py  base.py
restaurants/migrations/: 0001_initial.py  0001_initial_squashed_0010_menuitem_enmain.py  0002_add_menuitem_fields.py  0003_menuitem_day_alter_menuitem_parent.py  0004_rename_extra_menuitem_extra_menu_and_more.py  0005_remove_menuitem_url_menuitem_storage_url.py  0006_rename_pork_menuitem_non_pork_alter_menuitem_price.py  0007_alter_menuitem_day_alter_menuitem_extra_menu_and_more.py  0008_alter_menuitem_options_and_more.py  0009_menuitem_enmain_menuitem_enside.py  0010_menuitem_enmain.py  0011_add_missing_enextra.py
restaurants/static/: admin.css  base.css  home.css  manifest.json  menu-detail.css  menu-list.css  nav.css  pages.css  serviceworker.js  styles.css  theme.js
src/: index.py
staticfiles/: admin.css  base.css  home.css  menu-detail.css  menu-list.css  nav.css  styles.css
(+21 files in other folders)
