[project]
name = "bob"
version = "0.1.0"
description = "Django app on Cloudflare Workers"
requires-python = ">=3.13"
dependencies = [
    "django>=4.2",
    "django-cf",
    "python-dotenv",
    "django-browser-reload",
    "django-pwa"
]

[dependency-groups]
dev = [
  "workers-py",
  "workers-runtime-sdk"
]
